sources/libClangSharp/ClangSharp.h

enum CX_LambdaCaptureDefault {
    CX_LCD_Invalid,
    CX_LCD_None = clang::LCD_None + 1,
    CX_LCD_ByCopy = clang::LCD_ByCopy + 1,
    CX_LCD_ByRef = clang::LCD_ByRef + 1,
};
enum CX_LiteralOperatorKind {
    CX_LOK_Invalid,
    CX_LOK_Raw = clang::UserDefinedLiteral::LOK_Raw + 1,
    CX_LOK_Template = clang::UserDefinedLiteral::LOK_Template + 1,
    CX_LOK_Integer = clang::UserDefinedLiteral::LOK_Integer + 1,
    CX_LOK_Floating = clang::UserDefinedLiteral::LOK_Floating + 1,
    CX_LOK_String = clang::UserDefinedLiteral::LOK_String + 1,
    CX_LOK_Character = clang::UserDefinedLiteral::LOK_Character + 1,
};
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsUnavailable(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsUnconditionallyVisible(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsUnnamedBitfield(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsUnsigned(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsUnsupportedFriend(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsUserProvided(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsVariadic(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsZeroLengthBitField(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getLambdaCallOperator(CXCursor C);
CLANGSHARP_LINKAGE CX_LambdaCaptureDefault clangsharp_Cursor_getLambdaCaptureDefault(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getLambdaContextDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getLambdaStaticInvoker(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getLabelExpr(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getLabelName(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getLhsExpr(CXCursor C);
CLANGSHARP_LINKAGE CX_LiteralOperatorKind clangsharp_Cursor_getLiteralOperatorKind(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getMaxAlignment(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getMethod(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getMethodFamily(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getMostRecentDecl(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getName(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getNextDeclInContext(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getNextSwitchCase(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getNominatedBaseClass(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getNominatedBaseClassShadowDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getNonClosureContext(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumArguments(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getNumClobbers(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getNumInputs(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getNumLabels(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getNumOutputs(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumAssocs(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumAssociatedConstraints(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumAttrs(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumBases(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumBindings(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumCaptures(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumChildren(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumCtors(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumDecls(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumEnumerators(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumExpansionTypes(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumExprs(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumExprsOther(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumFields(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumFriends(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumMethods(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumProtocols(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumSpecializations(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumTemplateArguments(CXCursor C);